#3 Add JGit functionality, it is now possible to clone the repo

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 
 # Ignore Gradle build output directory
 build
+
+#ignore the data-folder containing the cloned repo (it will be stored locally on the server)
+data/
